syntax = "proto3";

package orders;

import "google/protobuf/timestamp.proto";
import "internal/orders/grpc/proto/annotations.proto";
// import "internal/orders/proto/options.annotations.proto";

option go_package = ".;pb";


service OrdersService {
    rpc Create (CreateOrderRequest) returns (CreateOrderResponse) {
        option (google.api.http) = {
            post: "/order"
            body: "*"
        };
        // option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
        //     parameters: {
        //         headers: {
        //             name: "Authorization";
        //             type: STRING,
        //             required: true;
        //         };
        //     };
        // };
    };
    rpc GetOne (GetOneOrderRequest) returns (GetOneOrderResponse) {
        option (google.api.http) = {
            get: "/order/{id}"
        };
    };
    rpc GetSome (GetSomeOrderRequest) returns (GetSomeOrderResponse) {
        option (google.api.http) = {
            get: "/order"
        };
    };
    rpc Cancel (CancelOrderRequest) returns (CancelOrderResponse) {
        option (google.api.http) = {
            patch: "/order/{id}"
        };
    };
    rpc Delete (DeleteOrderRequest) returns (DeleteOrderResponse) {
        option (google.api.http) = {
            delete: "/order/{id}"
        };
    };
}

message Order {
    enum Status {
        PENDING = 0;
        DELIVERED = 1;
        CANCELLED = 2;
    }
    uint32 id = 1;
    uint32 userid = 2;
    Status status = 3;
    string coffee = 4;
    string topping = 5;
    uint32 sugar = 6;
    float total = 7;
    google.protobuf.Timestamp date = 8;
}

// Create

message CreateOrderRequest {
    string coffee = 1;
    string topping = 2;
    uint32 sugar = 3;
}

message CreateOrderResponse {
    Order order = 1;
}

// Get One

message GetOneOrderRequest {
    uint32 id = 1;
}

message GetOneOrderResponse {
    Order order = 1;
}

// Get Some
// Returns only 5 orders per request
message GetSomeOrderRequest {
    uint32 shift = 1;
}

message GetSomeOrderResponse {
    repeated Order orders = 1;
}

// Cancel

message CancelOrderRequest {
    uint32 id = 1;
}

message CancelOrderResponse {
    Order order = 1;
}

// Delete

message DeleteOrderRequest {
    uint32 id = 1;
}

message DeleteOrderResponse {
    Order order = 1;
}